// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowHistoryEventStatusBadge should match snapshot when size is not valid and icon should not be rendered 1`] = `
<div>
  <div
    class="css-cOgsKQ"
  />
  <div
    class="css-PKJb"
  />
</div>
`;

exports[`WorkflowHistoryEventStatusBadge should match snapshot when status is COMPLETED and size is medium 1`] = `
<div>
  <div
    class="css-cOgsKQ"
  >
    <div
      class="css-iRFFER"
    >
      <svg
        fill="currentColor"
        height="14px"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="14px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
    </div>
  </div>
  <div
    class="css-PKJb"
  />
</div>
`;

exports[`WorkflowHistoryEventStatusBadge should match snapshot when status is COMPLETED and size is small 1`] = `
<div>
  <div
    class="css-cOgsKQ"
  >
    <div
      class="css-cnNQvr"
    >
      <svg
        fill="currentColor"
        height="10px"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="10px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
    </div>
  </div>
  <div
    class="css-PKJb"
  />
</div>
`;

exports[`WorkflowHistoryEventStatusBadge should match snapshot when status is FAILED and size is medium 1`] = `
<div>
  <div
    class="css-cOgsKQ"
  >
    <div
      class="css-eTedKk"
    >
      <svg
        fill="currentColor"
        height="14px"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="14px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.73 3H8.27L3 8.27v7.46L8.27 21h7.46L21 15.73V8.27L15.73 3zM19 14.9 14.9 19H9.1L5 14.9V9.1L9.1 5h5.8L19 9.1v5.8z"
        />
        <path
          d="M11 7h2v6h-2zM11 15h2v2h-2z"
        />
      </svg>
    </div>
  </div>
  <div
    class="css-PKJb"
  />
</div>
`;

exports[`WorkflowHistoryEventStatusBadge should match snapshot when status is FAILED and size is small 1`] = `
<div>
  <div
    class="css-cOgsKQ"
  >
    <div
      class="css-jEHXZG"
    >
      <svg
        fill="currentColor"
        height="10px"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="10px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.73 3H8.27L3 8.27v7.46L8.27 21h7.46L21 15.73V8.27L15.73 3zM19 14.9 14.9 19H9.1L5 14.9V9.1L9.1 5h5.8L19 9.1v5.8z"
        />
        <path
          d="M11 7h2v6h-2zM11 15h2v2h-2z"
        />
      </svg>
    </div>
  </div>
  <div
    class="css-PKJb"
  />
</div>
`;

exports[`WorkflowHistoryEventStatusBadge should match snapshot when status is ONGOING and size is medium 1`] = `
<div>
  <div
    class="css-cOgsKQ"
  >
    <div
      class="css-ZnzXk"
    >
      <i
        aria-busy="true"
        aria-label="loading"
        class="css-dVLAqi"
        role="progressbar"
      />
    </div>
  </div>
  <div
    class="css-PKJb"
  />
</div>
`;

exports[`WorkflowHistoryEventStatusBadge should match snapshot when status is ONGOING and size is small 1`] = `
<div>
  <div
    class="css-cOgsKQ"
  >
    <div
      class="css-hemuea"
    >
      <i
        aria-busy="true"
        aria-label="loading"
        class="css-dQmCZe"
        role="progressbar"
      />
    </div>
  </div>
  <div
    class="css-PKJb"
  />
</div>
`;

exports[`WorkflowHistoryEventStatusBadge should match snapshot when status is WAITING and size is medium 1`] = `
<div>
  <div
    class="css-cOgsKQ"
  >
    <div
      class="css-ioUFkF"
    >
      <svg
        fill="currentColor"
        height="14px"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="14px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="m6 2 .01 6L10 12l-3.99 4.01L6 22h12v-6l-4-4 4-3.99V2H6zm10 14.5V20H8v-3.5l4-4 4 4z"
        />
      </svg>
    </div>
  </div>
  <div
    class="css-PKJb"
  />
</div>
`;

exports[`WorkflowHistoryEventStatusBadge should match snapshot when status is WAITING and size is small 1`] = `
<div>
  <div
    class="css-cOgsKQ"
  >
    <div
      class="css-bLcQbf"
    >
      <svg
        fill="currentColor"
        height="10px"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="10px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="m6 2 .01 6L10 12l-3.99 4.01L6 22h12v-6l-4-4 4-3.99V2H6zm10 14.5V20H8v-3.5l4-4 4 4z"
        />
      </svg>
    </div>
  </div>
  <div
    class="css-PKJb"
  />
</div>
`;

exports[`WorkflowHistoryEventStatusBadge should match snapshot when status is not valid and badge should not be rendered 1`] = `
<div>
  <div
    class="css-cOgsKQ"
  />
  <div
    class="css-PKJb"
  />
</div>
`;
